--- a/style.css
+++ b/style.css
@@ -1,28 +1,34 @@
 /* defaults */
-*,  *::before, *::after {
+*,
+*::before,
+*::after {
     margin: 0;
     padding: 0;
     border: 0;
     box-sizing: border-box;
 }
-ul,ol {
+
+ul,
+ol {
     list-style: none;
 }
+
 button {
     outline: none;
 
 
 }
-a, a:visited {
+
+a,
+a:visited {
     text-decoration: none;
     color: inherit;
 }
+
 /* defaults */
 
 /* header */
-.header {
-
-}
+.header {}
 
 .header__wrapper {
     display: flex;
@@ -32,24 +38,26 @@ a, a:visited {
 }
 
 .logo img {
-width: 50px;
-height: 50px;
+    width: 50px;
+    height: 50px;
 }
 
 nav>ul {
-display: flex;
-align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 nav>ul li:not(:last-child) {
-margin-right: 15px;
+    margin-right: 15px;
 }
-.nav__list li a {
-}
+
+.nav__list li a {}
+
 .nav__list li a:hover {
     text-decoration: underline;
 
 }
+
 /* header */
 
 
@@ -57,35 +65,53 @@ margin-right: 15px;
 .hero {
     margin-top: 35px;
 }
+
 .hero__wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
 
 }
+
 .hero__title {
     font-size: 45px;
 
 }
+
 .service {
     margin-top: 25px;
 }
+
 .service__wrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-}   
+}
+
 .service__title {
     font-size: 25px;
-margin-bottom: 15px;
+    margin-bottom: 15px;
 }
+
 .service__steps li {
-margin-bottom: 15px;
-font-size: 25px;
-animation: step 1s ease 0s 1 normal forwards;
+    margin-bottom: 25px;
+    font-size: 25px;
+    animation: step 1s ease 0s 1 normal forwards;
 
 }
+
+.service__steps li:hover .service__steps ul li span {
+    background: #000;
+    color: #fff;
+}
+
+.service__steps li span {
+    border: 3px solid #000;
+    padding: 5px;
+    border-radius: 50%;
+}
+
 @keyframes step {
     from {
         transform: translateX(-100%);
@@ -100,17 +126,77 @@ animation: step 1s ease 0s 1 normal forwards;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
 }
+
 .locations__title {
     font-size: 35px;
+    margin-bottom: 75px;
 }
+
 .locations__cards {
-
+    display: flex;
 }
 
-.locations__card {
+.locations__card {}
 
+.locations__card:not(:last-child) {
+    margin-right: 35px;
 }
+
+
+.locations__card img {
+    width: 360px;
+    height: 270px;
+}
+
+.locations__card figcaption {}
+
 /* locations */
+
+/* reports */
+.reports {
+    margin-top: 50px;
+}
+
+.reports__wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.reports__title {
+    font-size: 35px;
+}
+
+.reports__cards {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.report__card:not(:last-child) {
+    margin-right: 35px;
+}
+
+.report__card {}
+
+.report__avatar {}
+
+.report__avatar img {
+    border-radius: 50%;
+    width: 360px;
+    height: 270px;
+}
+
+.report__content {
+    width: 350px;
+    text-align: center;
+}
+
+/* reports */
+
+
 
 /* main */
